--- a/styles/style.css
+++ b/styles/style.css
@@ -266,3 +266,49 @@ ul {
 .margin-top {
     margin-top: 2rem;
 }
+
+.business-title {
+    width: 60%;
+    margin: 0 auto;
+    font-size: 2rem;
+    padding-bottom: 5rem;
+}
+
+.business-cards-container {
+    width: 60%;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2rem;
+    padding-bottom: 5rem;
+}
+
+.business-card {
+    flex-basis: calc((100% - 2rem * 2) / 3);
+}
+
+.business-card h3 {
+    margin-bottom: 1.5rem;
+}
+
+.business-img {
+    width: 100%;
+    height: auto;
+    display: block;
+}
+
+.team-business {
+    width: 60%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 4rem;
+    font-size: 2rem;
+    padding: 10rem 0;
+}
+
+.size-1 {
+    font-size: 1rem;
+}
