add: bonus html css (logo e arrow cliccabili che mi portano in una certa parte della pagina, link nella navbar che si sottolineano quando ci passo sopra, dropdown della voce funzioni, billing option che si colorano di blu quando premute)

--- a/styles/style.css
+++ b/styles/style.css
@@ -8,9 +8,41 @@ html {
     font-family: "Open Sans", sans-serif;
 }
 
+header {
+    position: sticky;
+    top: 0;
+    z-index: 100;
+}
+
 a {
     text-decoration: none;
     color: black;
+}
+
+header a {
+    text-decoration: none;
+    color: black;
+}
+
+header a:not(.btn):not(:has(img)) {
+    display: flex;
+    align-items: center;
+    padding: 2rem 0;       
+    border-bottom: 2px solid transparent;
+    transition: border-color 0.2s ease;
+}
+
+header a:not(.btn):not(:has(img)):hover {
+    border-bottom-color: black;
+}
+
+header a:has(img) {
+    display: flex;
+    align-items: center;   
+}
+
+header .btn {
+    align-self: center;
 }
 
 ul {
@@ -39,14 +71,12 @@ ul {
     display: flex;
     width: 100%;
     justify-content: space-between;
-    align-items: center;
-    padding: 2rem 2rem 2rem 2rem;
+    padding: 0 2rem;
 }
 
 .header-box {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    align-items: center; 
     gap: 2rem;
     font-size: 1.5rem;
 }
@@ -311,4 +341,87 @@ ul {
 
 .size-1 {
     font-size: 1rem;
+}
+
+.billing-toggle {
+    display: flex;
+    gap: 2rem;
+    font-size: 1.4rem;
+}
+
+
+.billing-option input {
+    position: absolute;
+    opacity: 0;
+    pointer-events: none;
+}
+
+
+.billing-option {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+
+
+.billing-option span::before {
+    content: "";
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    border: 5px solid #ccc;      
+    background-color: white;     
+    display: inline-block;
+    margin-right: 8px;
+    transition: border-color 0.2s ease;
+}
+
+
+.billing-option input:checked + span::before {
+    border-color: #0061fe;
+}
+
+.dropdown {
+    position: relative;
+}
+
+.drop-btn {
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: 1.4rem;
+}
+
+.drop-menu {
+    position: absolute;
+    top: 100%;
+    left: 0;
+
+    background: white;
+    padding: 1rem;
+    display: none;
+
+    border: 1px solid #ddd;
+    border-radius: 6px;
+}
+
+.dropdown:hover .drop-menu {
+    display: block;
+}
+
+.drop-menu a {
+    display: block;
+    padding: 0.5rem 0;
+    text-decoration: none;
+    color: black;
+}
+
+.drop-menu a {
+    border-bottom: none !important;   
+    padding: 0.5rem 0;                
+}
+
+.drop-menu a:hover {
+    border-bottom: none !important;   
+    background-color: #f5f5f5;
 }
